# fwupd

./: meson_options.txt
contrib/: fwupd.spec.in
data/bash-completion/: fwupdmgr  fwupdtool
docs/: hsi.md
libfwupd/: fwupd-security-attr-private.h
plugins/: meson.build
plugins/dell-dock/: fu-plugin-dell-dock.c
plugins/genesys/: fu-genesys-common.h  fu-genesys-firmware.c  fu-genesys-firmware.h  fu-genesys-flash-info-table.h  fu-genesys-scaler-firmware.c  fu-genesys-scaler-firmware.h  fu-genesys-scaler.c  fu-genesys-scaler.h  fu-genesys-usbhub-firmware.c  fu-genesys-usbhub-firmware.h  fu-genesys-usbhub.c  fu-genesys-usbhub.h  fu-plugin-genesys.c  genesys.quirk  meson.build
plugins/kinetic-dp/: fu-kinetic-dp-secure-aux-isp.c  meson.build
plugins/msr/: fu-plugin-msr.c
plugins/pci-psp/: fu-plugin-pci-psp.c
src/: fu-security-attr.c  fu-tool.c
